src/test/resources/public/input/typechecking/fail/double_decl/fail07.jova
class Cls {

  public int func(int x, bool y) {
    return 42;
  }

    public int func(int myint, bool x) {
    return 42;
  }
}
